--- a/HumPsi.FrontEnd/HumPsi.FrontEnd.csproj
+++ b/HumPsi.FrontEnd/HumPsi.FrontEnd.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Folder Include="AngularApp\src\app\components\Headlines\" />
       <Folder Include="AngularApp\src\app\components\layout\" />
       <Folder Include="AngularApp\src\app\models\" />
     </ItemGroup>
